<?xml version="1.0"?>
<package format="2">
  <name>mpc_msgs</name>
  <version>0.0.0</version>
  <description>mpc_msgs package</description>

  <maintainer email="morinsol@outlook.com">morin</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
